--- a/views/partials/headerLoggedProfil.ejs
+++ b/views/partials/headerLoggedProfil.ejs
@@ -1,6 +1,6 @@
 
         <header class="col-md-12">
-            <div class="offset-3 col-9 col-md-3 offset-md-9 row" id="inscription_connexion">
+            <div class="col-8 col-md-3 offset-md-9 text-right d-flex justify-content-end" id="deconnexion">
                 <a href="../logout"><p class="col-md-6 menu_inscription">Déconnexion</p></a>
 
             </div>
@@ -11,5 +11,4 @@
         <div id="pageContent">
             <!-- le bouton qui permet d'afficher le Menu -->
             <button class="openbtn" id="btnOpen" onclick="showMenu()">&#9776;</button>
-
             <div id="corps text-center">
