--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -5,61 +5,89 @@
     </head>
     <body>
         <% if(logged==true){ %>
-           <%- include('./partials/headerLogged'); -%>
-         <% } else{ %>
-           <%- include('./partials/header'); -%>
+        <%- include('./partials/headerLogged'); -%>
+        <% } else{ %>
+        <%- include('./partials/header'); -%>
         <% } %>
 
         <script>
-        <% if (typeof error!='undefined') { %>
+            <% if (typeof error!='undefined') { %>
             alert('<%= error %>');
-        <% } %>
+                  <% } %>
         </script>
 
 
 
         <!--Reste de la page-->
         <div id="acceuil" class="col-md-12">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner ">
-                    <div class="carousel-item row active">
-                        <img class="d-block img-fluid " src="img/jumping_joy.jpg" alt="First slide">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Le concept</h5>
-                            <p>Vous devez effectuer un trajet mais les transports en communs ne le pemettent pas? Alors vous êtes au bon endroit. En effet, notre site vous permet de rechercher une multitude de trajet et de rencontrer de nombreuses personnes grâce au covoiturage.</p>
+            <div class="text-center align-middle justify-content-center row" id="aa">
+                <div id="carous">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner justify-content-center">
+                            <div class="carousel-item row active">
+                                <img class="d-block img-fluid " src="img/jumping_joy.jpg" alt="First slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Le concept</h5>
+                                    <p>Vous devez effectuer un trajet mais les transports en communs ne le pemettent pas? Alors vous êtes au bon endroit. En effet, notre site vous permet de rechercher une multitude de trajet et de rencontrer de nombreuses personnes grâce au covoiturage.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="img/Present.png" alt="Second slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Comment ça marche?</h5>
+                                    <p> Rien de plus simple, il vous suffit de créer votre compte et vous pourrez accéder à tout les trajets proposés par des chauffeurs, de proposer le votre ou encore de d'en proposer un aux divers chauffeurs du site.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid " src="img/route.jpg" alt="Third slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Quels sont les avantages?</h5>
+                                    <p>Le covoiturage vous permet de diminuer la consommation d'essence, de rencontrer de nouvelles personnes et de découvrir une nouvelle manière de voyager! </p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block img-fluid" src="img/Present.png" alt="Second slide">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Comment ça marche?</h5>
-                            <p> Rien de plus simple, il vous suffit de créer votre compte et vous pourrez accéder à tout les trajets proposés par des chauffeurs, de proposer le votre ou encore de d'en proposer un aux divers chauffeurs du site.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block img-fluid " src="img/route.jpg" alt="Third slide">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Quels sont les avantages?</h5>
-                            <p>Le covoiturage vous permet de diminuer la consommation d'essence, de rencontrer de nouvelles personnes et de découvrir une nouvelle manière de voyager! </p>
-                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
+                <section id="description"  >
+                    <article>
+                        <h5>Le concept</h5>
+                        <p class="text-left">Vous devez effectuer un trajet mais les transports en communs ne le pemettent pas? Alors vous êtes au bon endroit. En effet, notre site vous permet de rechercher une multitude de trajet et de rencontrer de nombreuses personnes grâce au covoiturage.</p>
+                    </article>
+                    <article>
+                        <h5>Comment ça marche?</h5>
+                        <p class="text-left"> Rien de plus simple, il vous suffit de créer votre compte et vous pourrez accéder à tout les trajets proposés par des chauffeurs, de proposer le votre ou encore de d'en proposer un aux divers chauffeurs du site.</p>
 
+                    </article>
+                    <article>
+                        <h5>Quels sont les avantages?</h5>
+                        <p class="text-left">Le covoiturage vous permet de diminuer la consommation d'essence, de rencontrer de nouvelles personnes et de découvrir une nouvelle manière de voyager! </p>
+                    </article>
+                </section>
+
+            </div>
+            <!-- -->
+        </div>
+        
+        <script> 
+            $(document).ready(function(){
+                /*je colore l'icone accueil pour dire que je suis sur cette page*/
+                $('#mySidebar .menu a:nth-child(n)').find('i').removeClass('change_page')
+                $('#mySidebar .menu a:nth-child(1)').find('i').addClass('change_page')
+            })
+        </script>
 
         <%- include('./partials/menu'); -%>
         <%- include('./partials/footer'); -%>
