--- a/views/demande.ejs
+++ b/views/demande.ejs
@@ -1,173 +1,184 @@
-    <!DOCTYPE html>
-    <html lang="fr">
-        <head>
-            <%- include('./partials/head'); -%>
-        </head>
-        <body>
-            <% if(logged==true){ %>
-                       <%- include('./partials/headerLogged'); -%>
-                     <% } else{ %>
-                       <%- include('./partials/header'); -%>
-                    <% } %>
-            <!--Reste de la page-->
-            <div id="demande" class="col-md-12">
-                <div  class="text-center box_search align-middle justify-content-center">
-                    <div class="col-md-12 row justify-content-center">
-                        <div class="col-md-12" id="accordion" >
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <%- include('./partials/head'); -%>
+    </head>
+    <body>
+        <% if(logged==true){ %>
+        <%- include('./partials/headerLogged'); -%>
+        <% } else{ %>
+        <%- include('./partials/header'); -%>
+        <% } %>
+        <!--Reste de la page-->
+        <div id="demande" class="col-md-12">
+            <div  class="text-center box_search align-middle justify-content-center">
+                <div class="col-md-12 row justify-content-center">
+                    <div class="col-md-12" id="accordion" >
 
-                            <div class="" id="headingOne">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                        Recherche avancée
-                                    </button>
-                                </h5>
-                            </div>
-                            <div class=" justify-content-center" id="filtre">
-                                <form id="collapseOne">
-                                    <div class="form-check form-check-inline">
-                                        <input onClick="filterDemandes('EN ATTENTE')" type="radio" name="filtre" class="form-check-input" id="attendre">
-                                        <label class="form-check-label" for="attendre">En attente</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input onClick="filterDemandes('REFUSÉ')" type="radio" name="filtre" class="form-check-input" id="refuse">
-                                        <label class="form-check-label" for="refuse">Refusé</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input onClick="filterDemandes('VALIDÉ')" type="radio" name="filtre" class="form-check-input" id="accepte">
-                                        <label class="form-check-label" for="accepte">Accepté</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input onClick="filterDemandes('ALL')" type="radio" name="filtre" class="form-check-input" name="filte" id="historique">
-                                        <label class="form-check-label" for="historique">Toutes les demandes</label>
-                                    </div>
-                                    <a type="submit"  title="rechercher"><i class="fas fa-search"></i></a>
-                                </form>
-                            </div>
+                        <div class="" id="headingOne">
+                            <h5 class="mb-0">
+                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                    Recherche avancée
+                                </button>
+                            </h5>
                         </div>
-                         <% for(var i=0; i < demandes.length; i++) { %>
-
-                        <div class="demandeContainer card liste">
-                            <div class="row ">
-                                <div class="col-md-2 align-self-center">
-                                     <% if(demandes[i].Emmeteur!=user){ %>
-                                    <a type="button" href="./Profil/<%= demandes[i].Emmeteur %>"><img class="rounded mx-auto d-block img-fluid rounded border_img" alt="photo_profil" title="voir le profil" src='../Pictures/<%= demandes[i].Emmeteur.split("@")[0] %>.png' onerror="this.onerror=null; this.src='../img/img-profil.jpg'"/>
-                                    <%= demandes[i].Emmeteur %>
-                                    </a>
-
-                                    <% } %>
-                                    <% if(demandes[i].Emmeteur==user){ %>
-                                      <a type="button" href="./Profil/<%= demandes[i].Recepteur %>"><img class="rounded mx-auto d-block img-fluid rounded border_img" alt="photo_profil" title="voir le profil" src='../Pictures/<%= demandes[i].Recepteur.split("@")[0] %>.png' onerror="this.onerror=null; this.src='../img/img-profil.jpg'"/>
-                                      <%= demandes[i].Recepteur %>
-                                      </a>
-
-                                     <% } %>
+                        <div class=" justify-content-center" id="filtre">
+                            <form id="collapseOne">
+                                <div class="form-check form-check-inline">
+                                    <input onClick="filterDemandes('EN ATTENTE')" type="radio" name="filtre" class="form-check-input" id="attendre">
+                                    <label class="form-check-label" for="attendre">En attente</label>
                                 </div>
-                                <div class="col-md-3 align-self-center"> <%= demandes[i].Message %>
+                                <div class="form-check form-check-inline">
+                                    <input onClick="filterDemandes('REFUSÉ')" type="radio" name="filtre" class="form-check-input" id="refuse">
+                                    <label class="form-check-label" for="refuse">Refusé</label>
                                 </div>
-                                <div class="col-md-4 align-self-center"> <%= demandes[i].AdrDep %> <br/> <%= demandes[i].AdrArr %> <br/>  <%= demandes[i].DateTrajet %>
+                                <div class="form-check form-check-inline">
+                                    <input onClick="filterDemandes('VALIDÉ')" type="radio" name="filtre" class="form-check-input" id="accepte">
+                                    <label class="form-check-label" for="accepte">Accepté</label>
                                 </div>
-                                <div class="col-md-1 align-self-center"> <%= demandes[i].NbPlacesDispo %>
+                                <div class="form-check form-check-inline">
+                                    <input onClick="filterDemandes('ALL')" type="radio" name="filtre" class="form-check-input" name="filte" id="historique">
+                                    <label class="form-check-label" for="historique">Toutes les demandes</label>
                                 </div>
-                                <div class="col-md-2 align-self-center">
-                                     <% if(demandes[i].Etat==2 && demandes[i].Emmeteur!=user){ %>
-                                    <button type="button" class="btn btn-warning etat" title="répondre" onclick="showModal('<%= demandes[i].IdTrajet %>','<%= demandes[i].AdrDep %>','<%= demandes[i].AdrArr %>','<%= demandes[i].DateTrajet %>','<%= demandes[i].Emmeteur %>')" ><span>EN ATTENTE</span></button>
-                                                          <% } %>
-                                     <% if(demandes[i].Etat==2 && demandes[i].Emmeteur==user){ %>
-                                     <button type="button" class="btn btn-warning etat" title="répondre"  ><span>EN ATTENTE</span></button>
-                                                                                               <% } %>
-                                      <% if(demandes[i].Etat==0){ %>
-                                     <button type="button" class="btn btn-danger disabled etat" ><span>REFUSÉ</span></button>
-                                                          <% } %>
-                                     <% if(demandes[i].Etat==1){ %>
-                                      <button type="button" class="btn btn-success disabled etat" ><span>VALIDÉ</span></button>
-                                                           <% } %>
-
-
-                                </div>
-                            </div>
+                                <a type="submit"  title="rechercher"><i class="fas fa-search"></i></a>
+                            </form>
                         </div>
-
-                        <% } %>
-
                     </div>
+                    <% for(var i=0; i < demandes.length; i++) { %>
+
+                    <div class="demandeContainer card liste">
+                        <div class="row ">
+                            <div class="col-md-2 align-self-center">
+                                <% if(demandes[i].Emmeteur!=user){ %>
+                                <a type="button" href="./Profil/<%= demandes[i].Emmeteur %>"><img class="rounded mx-auto d-block img-fluid rounded border_img" alt="photo_profil" title="voir le profil" src='../Pictures/<%= demandes[i].Emmeteur.split("@")[0] %>.png' onerror="this.onerror=null; this.src='../img/img-profil.jpg'"/>
+                                    <%= demandes[i].Emmeteur %>
+                                </a>
+
+                                <% } %>
+                                <% if(demandes[i].Emmeteur==user){ %>
+                                <a type="button" href="./Profil/<%= demandes[i].Recepteur %>"><img class="rounded mx-auto d-block img-fluid rounded border_img" alt="photo_profil" title="voir le profil" src='../Pictures/<%= demandes[i].Recepteur.split("@")[0] %>.png' onerror="this.onerror=null; this.src='../img/img-profil.jpg'"/>
+                                    <%= demandes[i].Recepteur %>
+                                </a>
+
+                                <% } %>
+                            </div>
+                            <div class="col-md-3 align-self-center"> <%= demandes[i].Message %>
+                            </div>
+                            <div class="col-md-4 align-self-center"> <%= demandes[i].AdrDep %> <br/> <%= demandes[i].AdrArr %> <br/>  <%= demandes[i].DateTrajet %>
+                            </div>
+                            <div class="col-md-1 align-self-center"> <%= demandes[i].NbPlacesDispo %>
+                            </div>
+                            <div class="col-md-2 align-self-center">
+                                <% if(demandes[i].Etat==2 && demandes[i].Emmeteur!=user){ %>
+                                <button type="button" class="btn btn-warning etat" title="répondre" onclick="showModal('<%= demandes[i].IdTrajet %>','<%= demandes[i].AdrDep %>','<%= demandes[i].AdrArr %>','<%= demandes[i].DateTrajet %>','<%= demandes[i].Emmeteur %>')" ><span>EN ATTENTE</span></button>
+                                <% } %>
+                                <% if(demandes[i].Etat==2 && demandes[i].Emmeteur==user){ %>
+                                <button type="button" class="btn btn-warning etat" title="répondre"  ><span>EN ATTENTE</span></button>
+                                <% } %>
+                                <% if(demandes[i].Etat==0){ %>
+                                <button type="button" class="btn btn-danger disabled etat" ><span>REFUSÉ</span></button>
+                                <% } %>
+                                <% if(demandes[i].Etat==1){ %>
+                                <button type="button" class="btn btn-success disabled etat" ><span>VALIDÉ</span></button>
+                                <% } %>
+
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <% } %>
 
                 </div>
 
             </div>
 
-            <!-- Modal reponse demandes -->
-            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle"></h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <form action="./Repondre" method="post">
+        </div>
+
+        <!-- Modal reponse demandes -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle"></h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <form action="./Repondre" method="post">
                         <div class="modal-body">
                             <input id="Emet" type="hidden" value="" name="Emmeteur">
                             <input id="Traj" type="hidden" value="" name="Trajet">
                             Acceptez-vous que Nom Prénom vous accompagne sur votre trajet ? <br/>
-                              <h5>De :</h5> <div id="AdrDep">Mantes-la-jolie</div>
-                              <h5>Vers :</h5>  <div id="AdrDest"> Versailles </div>
-                              <h5>Le :</h5>   <div id="DateDep"> 10/04/2020 </div>
+                            <h5>De :</h5> <div id="AdrDep">Mantes-la-jolie</div>
+                            <h5>Vers :</h5>  <div id="AdrDest"> Versailles </div>
+                            <h5>Le :</h5>   <div id="DateDep"> 10/04/2020 </div>
                         </div>
                         <div class="modal-footer">
                             <button type="submit" class="btn btn-danger"  name="Reponse" value="Refuser">Refuser</button>
                             <button type="submit" class="btn btn-success" name="Reponse" value="Accepter" >Accepter</button>
                         </div>
-                        </form>
-                    </div>
+                    </form>
                 </div>
             </div>
+        </div>
 
 
-            <%- include('./partials/menu'); -%>
-            <%- include('./partials/footer'); -%>
 
-            <script>
-            function showModal(data,adrD,adrA,DateD,Nom)
-            {
-                $("#exampleModalCenter #exampleModalLongTitle").text('Trajet N'+data);
-                $("#Emet").val(Nom);
-                $("#Traj").val(data);
-                $("#exampleModalCenter #AdrDep").text(adrD);
-                $("#exampleModalCenter #AdrDest").text(adrA);
-                $("#exampleModalCenter #DateDep").text(DateD);
-                $("#exampleModalCenter").modal('toggle');
+    <%- include('./partials/menu'); -%>
+    <%- include('./partials/footer'); -%>
+        
+        <script> 
+            $(document).ready(function(){
+                /*je colore l'icone demande pour dire que je suis sur cette page*/
+                $('#mySidebar .menu a:nth-child(n)').find('i').removeClass('change_page')
+                $('#mySidebar .menu a:nth-child(7)').find('i').addClass('change_page')
+                $('#mySidebar .menu a:nth-child(n)').removeClass('change_page')
+                $('#mySidebar .menu a:nth-child(7)').addClass('change_page')
+            })
+        </script>
+
+    <script>
+        function showModal(data,adrD,adrA,DateD,Nom)
+        {
+            $("#exampleModalCenter #exampleModalLongTitle").text('Trajet N'+data);
+            $("#Emet").val(Nom);
+            $("#Traj").val(data);
+            $("#exampleModalCenter #AdrDep").text(adrD);
+            $("#exampleModalCenter #AdrDest").text(adrA);
+            $("#exampleModalCenter #DateDep").text(DateD);
+            $("#exampleModalCenter").modal('toggle');
+        }
+
+
+        function filterDemandes(state) {
+
+
+
+
+
+            liste=document.getElementsByClassName("card liste");
+
+
+            for (i = 0; i < liste.length; i++) {
+
+                button=liste[i].getElementsByTagName("span")[0];
+                etat=button.innerText;
+                if(state=="ALL") {
+                    liste[i].style.display="inline";
+                }
+                else
+                {
+                    if (etat==state) {
+                        liste[i].style.display="inline";
+                    }
+                    else
+                    {
+                        liste[i].style.display="none";
+                    }
+                }
             }
-
-
-                        function filterDemandes(state) {
-
-
-
-
-
-                          liste=document.getElementsByClassName("card liste");
-
-
-                          for (i = 0; i < liste.length; i++) {
-
-                              button=liste[i].getElementsByTagName("span")[0];
-                              etat=button.innerText;
-                            if(state=="ALL") {
-                               liste[i].style.display="inline";
-                            }
-                            else
-                            {
-                            if (etat==state) {
-                               liste[i].style.display="inline";
-                            }
-                            else
-                            {
-                               liste[i].style.display="none";
-                            }
-                            }
-                          }
-                        }
-            </script>
-        </body>
-    </html>
+        }
+    </script>
+    </body>
+</html>
