--- a/views/partials/footerProfil.ejs
+++ b/views/partials/footerProfil.ejs
@@ -2,12 +2,14 @@
 <!-- importe les codes javascript utilisés -->
         <script src="../javascripts/script.js" defer></script>
         <script src="../javascripts/inscription.js" defer></script>
-        <script src="../javascripts/auto-complete.js"></script>
+<!--        <script src="../javascripts/auto-complete.js"></script>-->
         <script src="../javascripts/profil.js"></script>
         <script src="../javascripts/register.js"></script>
         <script src="../javascripts/autocomplete.js"></script>
         <script src="../javascripts/messagerie.js"></script>
 <!--        <script src="../javascripts/profil.js"></script>-->
+
+
         <!--  Modal   connexion -->
         <div class="modal fade" id="Modalconnexion" tabindex="-1" role="dialog" aria-labelledby="Modalconnexion"  aria-hidden="true" >
             <div class="modal-dialog modal-dialog-centered" role="document">
