--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 
-        <header class="col-md-12 row">
-            <div class="offset-3 col-9 col-md-3 offset-md-9 row" id="inscription_connexion">
-                <a href="#"><p class="col-md-6 menu_inscription">Inscription</p></a>
-                <a href="#"><p class="col-md-6 menu_connexion">Connexion</p></a>
+        <header class="col-md-12 ">
+            <div class="col-8 col-md-3 offset-md-9 row text-right d-flex justify-content-end" id="inscription_connexion">
+                <a href="#" class="col-md-6 col-4 "><p class="menu_inscription">Inscription</p></a>
+                <a href="#" class="col-md-6 col-4 "><p class=" menu_connexion">Connexion</p></a>
             </div>
             <div  class="col-md-12 sol-sm-12 text-center" ><img src="img/Covoit1.png" alt="covoit"/></div>
 
