--- a/views/partials/headerLogged.ejs
+++ b/views/partials/headerLogged.ejs
@@ -1,9 +1,10 @@
 
         <header class="col-md-12">
-            <div class="offset-3 col-9 col-md-3 offset-md-9 row" id="inscription_connexion">
+            <div class="col-8 col-md-3 offset-md-9 text-right d-flex justify-content-end" id="deconnexion">
                 <a href="./logout"><p class="col-md-6 menu_inscription">Déconnexion</p></a>
 
             </div>
+<!--            <div  class="col-md-12 sol-sm-12 text-center" ><h5>COVOIT'<em>Student</em></h5></div>-->
             <div  class="col-md-12 sol-sm-12 text-center" ><img src="img/Covoit1.png" alt="covoit"/></div>
 
         </header>
@@ -13,3 +14,5 @@
             <button class="openbtn" id="btnOpen" onclick="showMenu()">&#9776;</button>
 
             <div id="corps text-center">
+                
+alao.a.s@gmail.com
