--- a/views/partials/menuProfil.ejs
+++ b/views/partials/menuProfil.ejs
@@ -4,16 +4,36 @@
         <!-- c'est la balise qui contient le menu -->
         <!-- on doit l'avoir dans toutes les pages du site -->
         <div id="mySidebar" class="sidebar">
-            <div class="col-md-12">
-                <a href="../" class="col-md-1"><img src="../img/icon_home.png" title="home" width="30px"></a>
-                <a href="javascript:void(0)" class=" col-md- 6 closebtn" onclick="hideMenu()">&times;</a>
+            <div id="gdmenu" class="menu">
+                <div class="col-md-12">
+                    <a href="./" class="col-md-1" title="home"><i class="fas fa-home"></i></a>
+                    <a href="javascript:void(0)" class=" col-md- 6 closebtn" onclick="hideMenu()">&times;</a>
+                </div>
+
+            
+                <a href="./Profil">Profil</a>
+                <a href="./Messagerie">Messagerie</a>
+                <a href="./Rechercher">Rechercher</a>
+                <a href="./search">Rechercher un profil</a>
+                <a href="./Proposer">Proposer un trajet</a>
+                <a href="./Demande">Mes réservations</a>
             </div>
+            
+            <div id="ptmenu" class="menu">
+                <div class="col-md-12">
+                    <a href="./" class="col-md-1" title="home"><i class="fas fa-home"></i></a>
+<!--                    <a href="./" class="col-md-1"><img src="img/icon_home.png" title="home" width="30px"></a>-->
+                    <a href="javascript:void(0)" class=" col-md- 6 closebtn" onclick="hideMenu()">&times;</a>
+                </div>
 
-            <a href="../Profil">Profil</a>
-             <a href="../Messagerie">Messagerie</a>
-            <a href="../Rechercher">Rechercher</a>
-            <a href="./search">Rechercher un profil</a>
-            <a href="../Proposer">Proposer un trajet</a>
-            <a href="../Demande">Mes réservations</a>
-        </div>
-
+            
+                <a href="./Profil" title="profil"><i class="fas fa-user"></i></a>
+                <a href="./Messagerie" title="messagerie"><i class="fas fa-comments"></i></a>
+                <a href="./Rechercher" title="rechercher"><i class="fas fa-search"></i></a>
+                <a href="./search" title="Rechercher un profil"><i class="fas fa-users"></i></a>
+                <a href="./Proposer" title="Proposer un trajet"><i class="fas fa-map-marked-alt"></i></a>
+                <a href="./Demande" title="Mes réservations"><i class="far fa-calendar-alt"></i></a>
+            </div>
+                
+            </div>
+      
