--- a/views/partials/footerProfil.ejs
+++ b/views/partials/footerProfil.ejs
@@ -24,14 +24,14 @@
                     <form method="post" action="../login" >
                     <div class="modal-body" >
                         <div class="form-group row">
-                            <label for="email" class="col-sm-4 col-form-label">Email</label>
+                            <label for="email" class="col-sm-4 col-5 col-form-label">Email</label>
                             <div class="col-sm-8">
                                 <input type="email" required="required" class="form-control" id="email" placeholder="Email" name="emailLog">
 
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="mdp" class="col-sm-4 col-form-label">Mot de passe</label>
+                            <label for="mdp" class="col-sm-4 col col-form-label">Mot de passe</label>
                             <div class="col-sm-8">
                                 <input type="password" required="required" class="form-control" id="mdp" placeholder="*******" name="passLog">
                             </div>
