--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -27,6 +27,25 @@
 <!--<link href="stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">-->
 <link href="stylesheets/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
 
+<!--Typographie-->
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+
+
+
+
+
+
+        <!-- Relie la page html avec le style css correspondant -->
+        <link rel="stylesheet" href="stylesheets/style.css" />
+        <link href="stylesheets/recherche.css" rel="stylesheet" media="screen">
+         <link rel="stylesheet" href="../stylesheets/style.css" />
+         <link href="../stylesheets/recherche.css" rel="stylesheet" media="screen">
+
+<!-- Relie la page html avec le style css correspondant -->
+<link rel="stylesheet" href="stylesheets/style.css" />
+<link href="stylesheets/recherche.css" rel="stylesheet" media="screen">
+
 
 
 
@@ -52,16 +71,3 @@
 //        import { mdbIcon } from '../node_modules/mdbvue';
 //        export default { components: { mdbIcon } }
 </script>
-
-
-        <!-- Relie la page html avec le style css correspondant -->
-        <link rel="stylesheet" href="stylesheets/style.css" />
-        <link href="stylesheets/recherche.css" rel="stylesheet" media="screen">
-         <link rel="stylesheet" href="../stylesheets/style.css" />
-         <link href="../stylesheets/recherche.css" rel="stylesheet" media="screen">
-
-<!-- Relie la page html avec le style css correspondant -->
-<link rel="stylesheet" href="stylesheets/style.css" />
-<link href="stylesheets/recherche.css" rel="stylesheet" media="screen">
-
-
