--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -40,8 +40,6 @@
                             </form>
                             <% } %>
 
-                            <div class="separation_paragraphe"></div>
-                            <a href="./messagerie" title="page messagerie"> <div class="col-md-12"><i class="fas fa-comments fa-2x msg"></i><span class="badge badge-light msg" id="msg_non_lu"></span></div></a>
                         </div>
                         <div id="infos" class=" col-md-8 col-sm-12">
                             <div class="list-group">
@@ -63,6 +61,15 @@
                                         <div class="col-sm-9 col input-group mb-2">
                                             <input type="email"  class="form-control " id="email" value="<%= useremail %>" readonly>
                                         </div>
+                                    </div>
+                                     <div class="form-group row">
+                                        <label for="email" class="col-sm-3 col-4 col-form-label">Adresse </label>
+                                        <div class="col-sm-9 col input-group mb-2">
+                                            <input type="text"  class="form-control " id="adresse" value="Adresse" >
+                                        </div>
+                                    </div>
+                                    <div class="text-center my-4">
+                                        <button class="btn btn-info btn-sm" type="submit">Modifier</button>
                                     </div>
 
 
@@ -158,11 +165,12 @@
                                                 <textarea class="form-control" id="quickReplyFormComment" rows="5" name="commentaire"></textarea>
                                                 <div class="text-center my-4">
                                                     <button id="postercom" class="btn btn-info btn-sm" type="submit">Post</button>
-                                                    </form>
-                                                <% } %>
-
                                                 </div>
-                                        </div>
+                                                   
+                                                <% } %>
+                                                </form>
+                                            </div>
+                                      
                                         <div id="containComment">
                                             <% for(var i=0; i < avis.length; i++) { %>
                                             <div class="media d-block d-md-flex mt-4">
@@ -176,7 +184,9 @@
                                                             <i class="fa fa-reply"></i>
                                                         </a>
                                                     </p>
+                                                    <p class="commentaire">
                                                     <%= avis[i].Commentaire %>
+                                                    </p>
                                                     <!-- Quick Reply -->
 
 
