--- a/views/proposer.ejs
+++ b/views/proposer.ejs
@@ -79,8 +79,8 @@
                             </div>
 
                             <div class="form-group  col-md-12 col-12 row">
-                                <label for="input-prix" class="col-1 col-5 form-label">Prix</label>
-                                <div class="col-2 col-7">
+                                <label for="input-prix" class="col-md-1 col-1 form-label">Prix</label>
+                                <div class="col-md-2 col-4">
                                     <input class="form-control" type="number" required value="10" id="input-prix" name="prix">
                                 </div>
                             </div>
